Try to use JBang